# quail

./: .gitignore  INSTALL.md  MANIFEST.in  PROJECT_STRUCTURE.md  README.md  USAGE.md  main.py  pyproject.toml  quail.bat  quail.py  quail.yml  quail_config.yml  setup.py  verify_installation.py
examples/sample-orm-project/: README.md  quail_config.yml
examples/sample-orm-project/models/: __init__.py  featurestore.py  pricing_report.py  quality_check.py  user_properties.py
examples/sample-orm-project/quail_modules/: __init__.py  data_quality.py
examples/sample-orm-project/services/: __init__.py  featurestore_service.py  pricing_report_service.py  property_service.py  quality_service.py  user_service.py
quail/: __main__.py  cli.py  core.py  graph.py  orm.py
quail.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
quail/context/: __init__.py  database_context.py  quality_context.py  service_context.py
quail/database/: __init__.py  base.py  mongo_context.py  sql_context.py
quail/reporting/: json_to_junit.py  markdown_reporter.py
quail_modules/: __init__.py  data_quality.py  feature_checks.py  pricing_validation.py
tests/: Quailtrail  quail.yml  test_core.py  test_orm.py
