[project]
name = "quail"
version = "0.1.0"
description = "Quail: Snakemake-like trails for QC"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["PyYAML>=6.0"]

[project.optional-dependencies]
pandas = ["pandas>=2.0"]
db = ["SQLAlchemy>=2.0"]
mongo = ["pymongo>=4.0"]

[project.scripts]
quail = "quail.cli:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
